fix - small screen scrollbar

--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -119,14 +119,12 @@
       overflow: hidden;
 
       .event {
-        overflow: hidden;
-        background-color: white;
+        
         width: 280px;
         height: 180px;
         border-radius: 20px;
         padding: 10px;
         margin: 20px auto 20px 0;
-        color: #282828;
         display: inline-block;
 
         h3 {
